Source/WebKit/Shared/ios/InteractionInformationRequest.cpp
@@ -39,6 +39,7 @@ void InteractionInformationRequest::encode(IPC::Encoder& encoder) const
     encoder << includeSnapshot;
     encoder << includeLinkIndicator;
     encoder << includeCaretContext;
+    encoder << includeHasDoubleClickHandler;
     encoder << linkIndicatorShouldHaveLegacyMargins;
 }
 
@@ -56,13 +57,16 @@ bool InteractionInformationRequest::decode(IPC::Decoder& decoder, InteractionInf
     if (!decoder.decode(result.includeCaretContext))
         return false;
 
+    if (!decoder.decode(result.includeHasDoubleClickHandler))
+        return false;
+
     if (!decoder.decode(result.linkIndicatorShouldHaveLegacyMargins))
         return false;
 
     return true;
 }
 
-bool InteractionInformationRequest::isValidForRequest(const InteractionInformationRequest& other, int radius)
+bool InteractionInformationRequest::isValidForRequest(const InteractionInformationRequest& other, int radius) const
 {
     if (other.includeSnapshot && !includeSnapshot)
         return false;
@@ -73,13 +77,16 @@ bool InteractionInformationRequest::isValidForRequest(const InteractionInformati
     if (other.includeCaretContext && !includeCaretContext)
         return false;
 
+    if (other.includeHasDoubleClickHandler && !includeHasDoubleClickHandler)
+        return false;
+
     if (other.linkIndicatorShouldHaveLegacyMargins != linkIndicatorShouldHaveLegacyMargins)
         return false;
 
     return (other.point - point).diagonalLengthSquared() <= radius * radius;
 }
     
-bool InteractionInformationRequest::isApproximatelyValidForRequest(const InteractionInformationRequest& other, int radius)
+bool InteractionInformationRequest::isApproximatelyValidForRequest(const InteractionInformationRequest& other, int radius) const
 {
     return isValidForRequest(other, radius);
 }
