Source/WebKit/Shared/ios/InteractionInformationRequest.h
@@ -42,6 +42,7 @@ struct InteractionInformationRequest {
     bool includeSnapshot { false };
     bool includeLinkIndicator { false };
     bool includeCaretContext { false };
+    bool includeHasDoubleClickHandler { true };
 
     bool linkIndicatorShouldHaveLegacyMargins { false };
 
@@ -51,8 +52,8 @@ struct InteractionInformationRequest {
         this->point = point;
     }
 
-    bool isValidForRequest(const InteractionInformationRequest&, int radius = 0);
-    bool isApproximatelyValidForRequest(const InteractionInformationRequest&, int radius);
+    bool isValidForRequest(const InteractionInformationRequest&, int radius = 0) const;
+    bool isApproximatelyValidForRequest(const InteractionInformationRequest&, int radius) const;
 
     void encode(IPC::Encoder&) const;
     static WARN_UNUSED_RETURN bool decode(IPC::Decoder&, InteractionInformationRequest&);
